--- a/src/Admin/Client/wwwroot/index.html
+++ b/src/Admin/Client/wwwroot/index.html
@@ -23,6 +23,9 @@
         <a class="dismiss">🗙</a>
     </div>
     <script src="_content/MudBlazor/MudBlazor.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/moment@2.24.0/min/moment.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-streaming@1.8.0"></script>
     <script src="_framework/blazor.webassembly.js"></script>
 </body>
 
